# snappy-ed

./: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/anonimeact/endec/: MainActivity.kt  Readme.txt
app/src/main/java/com/anonimeact/sqliteencryptor/: MainActivity.kt
app/src/main/java/com/anonimeact/sqliteencryptor/anonimeactproduct/: Kodepos.java
app/src/main/java/com/anonimeact/sqliteencryptor/apps/: AppPetaZiarah.kt
app/src/main/java/com/anonimeact/sqliteencryptor/jadwalsholat/: ApiServices.java  Base.java  JadwalSolatKemenag.kt  PojoLokasi.java  ResVersion.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
snappy/: build.gradle  maven.jcenter.publish.gradle
snappy-ed/: CMakeLists.txt  build.gradle
snappy-ed/src/androidTest/java/com/anonimeact/snappy_ed/: ExampleInstrumentedTest.kt
snappy-ed/src/main/cpp/: ed_lib.cpp
snappy-ed/src/main/cpp/snappy/: snappy-native.cc  snappy-native.h
snappy-ed/src/main/java/com/anonimeact/snappy_ed/: EnDec.kt  Loader.kt  Utils.kt
snappy-ed/src/main/java/com/anonimeact/snappy_ed/snappy/: Snappy.java  SnappyError.java  SnappyErrorCode.java  SnappyLoader.java  SnappyNative.java  package-info.java
snappy-ed/src/test/java/com/anonimeact/snappy_ed/: ExampleUnitTest.kt
